sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: not found: value m
      if(plusPetit(m,getValeur(i-k))){
                   ^